# Desktop

./: .gitignore  专注宝.xmind
Firmware/: spi+lcd.drawio
Firmware/Epaper_App/: Makefile  compile_commands.json
Firmware/Epaper_App/.cache/clangd/index/: DEV_Config.c.8441D000F1F876F3.idx  (+167 more)
Firmware/Epaper_App/examples/: EPD_1in54_V2_test.c  EPD_2in7_V2_test.c  EPD_2in9_V2_test.c  main.c
Firmware/Epaper_App/lib/Config/: DEV_Config.c  RPI_sysfs_gpio.h  dev_hardware_SPI.c
Firmware/Epaper_App/lib/e-Paper/: EPD_2in9_V2.c
Firmware/Epaper_Driver/: .epaper_driver.ko.cmd  .epaper_driver.mod.o.cmd  .epaper_driver.o.cmd  Makefile  compile_commands.json  epaper_driver.c  epaper_driver.ko  epaper_driver.mod.c  imx-fire-ecspi-e_paper-overlay.dts  modules.order  tags
Firmware/Epaper_Driver/.tmp_versions/: epaper_driver.mod
Firmware/TFT_App/: CMakeLists.txt  Makefile  compile_commands.json  main
Firmware/TFT_App/examples/: LCD_1in8_test.c
Firmware/TFT_App/include/: beep.h  button.h  custom_print.h  tft_lcd.h
Firmware/TFT_App/lib/Config/: DEV_Config.c
Firmware/TFT_App/lib/GUI/: GUI_BMP.c  GUI_Paint.c  GUI_Paint.h
Firmware/TFT_App/src/: beep.c  button.c  custom_print.c  main.c  tags  tft_lcd.c
Firmware/TFT_App2/: compile_commands.json  main
Firmware/TFT_App2/examples/: main.c
Firmware/TFT_App2/lib/Config/: DEV_Config.h  dev_hardware_SPI.c
Firmware/TFT_App2/lib/GUI/: image_girl.c
Firmware/TFT_Driver/: Makefile  compile_commands.json  desktop_focus  imx-fire-ecspi-e_paper-overlay.dts  imx-fire-ecspi-lcd-overlay.dts  lcd_driver.c  lcd_driver.h  lcd_driver.ko  lcd_driver.ko.lnk  lcd_driver.mod.c  lcd_driver1.ko  modules.order  tft_driver.c  tft_driver.ko
(+2 files in other folders)
